Prevent horizontal scrolling on small screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -126,6 +126,7 @@
   filter: brightness(0) saturate(100%) invert(87%) sepia(100%) saturate(748%) hue-rotate(1deg) brightness(104%) contrast(101%);
 }
 
-html {
+html, body {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
